2004-07-16  Jonathan Graehl  <graehl@isi.edu>

	* src/dynarray.h: nonstd namespace for reimp of stuff that used to
	be std (construct, uninitialized_copy)

2004-07-15  Jonathan Graehl  <graehl@isi.edu>

	* src/list.h: two-phase name lookup gcc 3.4 problems also
	everywhere, see C++ spec section 14.6.2 paragraph 3 and section
	14.6.2.1. or
	http://groups.google.com/groups?q=base+class+%22depend+on+a+template+parameter,+so%22&hl=en&lr=&ie=UTF-8&selm=MY3kc.28415%24Qc.1096675%40twister1.libero.it&rnum=2

	> Replacing f() with A<T>::f() will fix it.

	Sure, as the name is now qualified and dependent on T, it will be bound 
	at the point of instantiation (phase two). In phase two, the compiler 
	knows the exact type that replaces T and so it can select the right 
	specialization of A<T> (specializing A<T> after this point makes the 
	program ill-formed).

	Another, more elegant, way to make the name dependent is by writing 
	this->f().

	
	* src/2hash.h: isn't compiling in gcc 3.4 because
	std::allocator::rebind isn't a template?

	* Makefile: now requires checkout of the tt project in parent dir
	(files should be in ../tt from here)

2004-04-21  Jonathan Graehl  <graehl@isi.edu>

	* src/strhash.h: tidied up templatization of Alphabet and added
	more tests

	* src/compose.cc: removed incorrect double-usage of static_itoa
	when naming composition of (unnamed) transducers, although that
	could never happen from the command line

2004-04-16  Jonathan Graehl  <graehl@isi.edu>

	* src/dynarray.h: optimization on push_back and end(): store vector 
	end instead of size.  removeMarked uses memmove on larger blocks.
	new Array class is base for DynamicArray.  unit test.

2004-02-27  Jonathan Graehl  <graehl@isi.edu>

	* src/2hash.h: made find_second, add global template functions,
	can use unordered_map (had to fix bugs in it though, and it takes
	36 bytes for an empty table compared to 24 for mine) if you
	#define UNORDERED_MAP in config.h.  My size goes down to 16 if you